# MacGitverModules

./: CMakeLists.txt
CustomCommands/: CMakeLists.txt  CustomCommandActions.hid  CustomCommandDef.cpp  CustomCommandDef.hpp  CustomCommandListCfgPage.cpp  CustomCommandListCfgPage.hpp  CustomCommandListCfgPage.ui  CustomCommandsModule.cpp  CustomCommandsModule.hpp  CustomCommandsView.cpp  CustomCommandsView.hpp  EditCustomCommandDlg.cpp  EditCustomCommandDlg.hpp  EditCustomCommandDlg.ui  Module.json
History/: CMakeLists.txt  HistoryDetails.cpp  HistoryDetails.h  HistoryDiff.cpp  ModHistory.rcc  commit-detail.css
Index/: CMakeLists.txt  IndexConfig.ccfg  IndexConfigPage.cpp  IndexConfigPage.h  IndexConfigPage.ui  IndexDelegate.cpp  IndexDelegate.h  IndexDlg.cpp  IndexDlg.h  IndexDlg.ui  IndexModule.cpp  IndexModule.h  IndexView.cpp  IndexView.h  IndexViewActions.hid  Module.json
RefsViews/: RefItem.cpp  RefItem.hpp  RefRenameDialog.cpp
RefsViews/Branches/: BranchesModel.cpp  BranchesModel.hpp  BranchesView.cpp  BranchesView.hpp  RefItem.cpp  RefItem.hpp
Remotes/: RemotesModule.cpp
Repository/: CreateRepositoryDlg.cpp  RepoTreeView.cpp  RepoTreeView.hpp  RepoTreeViewCtxMenu.hid
cmake/: QtMacros.cmake
src/Libs/Config/: CMakeLists.txt
src/Libs/GitWrap/: CMakeLists.txt  MetaTypes.h  Repository.cpp
src/Libs/Heaven/: CMakeLists.txt
src/Libs/Interfaces/: CMakeLists.txt
src/Libs/MacGitver/: CMakeLists.txt
src/Libs/Widgets/: CMakeLists.txt
src/Main/: CMakeLists.txt  MacGitver.rcc
src/Modules/: CMakeLists.txt
tools/hic/: CMakeLists.txt
(+20 files in other folders)
